@@ -6,6 +6,7 @@
 - #68 Don't show "Check version" modal on every start
 - #71 Bug: Crashes on windows if key doesn't exist
 - Update QScintilla to version 2.10.1
+- Update libssh2 sources to version 1.8.1 dev
 
 1.5.1 / May 18, 2017
 [Alexandr Topilski]
