@@ -18,10 +18,11 @@
 
 #pragma once
 
-#include "fasto_editor.h"
+#include "gui/editor/fasto_editor.h"
 
 namespace fastonosql {
 namespace gui {
+
 class FastoEditorShell : public FastoEditor {
   Q_OBJECT
  protected Q_SLOTS:
@@ -30,5 +31,6 @@ class FastoEditorShell : public FastoEditor {
  protected:
   explicit FastoEditorShell(bool showAutoCompl, QWidget* parent = 0);
 };
+
 }  // namespace gui
 }  // namespace fastonosql
